--- a/Models/SpeechLM/2023.05.16_SoundStorm.md
+++ b/Models/SpeechLM/2023.05.16_SoundStorm.md
@@ -45,7 +45,7 @@ Audio samples are available at https://google-research.github.io/seanet/soundsto
 
 ## 1·Introduction·引言
 
-Modeling discrete representations of audio produced by neural codecs ([SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md)) makes the task of audio generation amenable to the powerful Transformer-based sequence-to-sequence modeling approaches ([Transformer (2017)](../_Transformer/2017.06.12_Transformer.md)).
+Modeling discrete representations of audio produced by neural codecs ([SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md)) makes the task of audio generation amenable to the powerful Transformer-based sequence-to-sequence modeling approaches ([Transformer (2017)](../_Transformer/2017.06.12_Transformer.md)).
 Casting unconditional and conditional audio generation as sequence-to-sequence modeling has unlocked rapid progress in speech continuation ([AudioLM (2022)](2022.09.07_AudioLM.md)), text-to-speech ([VALL-E (2023)](2023.01.05_VALL-E.md); [SPEAR-TTS (2023)](2023.02.07_SPEAR-TTS.md)), and general audio and music generation ([AudioGen (2022)](2022.09.30_AudioGen.md); [MusicLM (2023)](2023.01.26_MusicLM.md)).
 
 建模由神经编解码器生成的音频离散表示使得音频生成任务可以采用强大的基于 Transformer 序列到序列建模方法.
@@ -76,7 +76,7 @@ However, in the context of modeling the token sequence of neural audio codecs, e
 然而在神经音频编解码器的 token 序列建模的背景下, 无论是在无条件还是弱条件 (如文本) 下, 高效生成长且高质量的音频片段仍是一个开放问题.
 
 We believe that it is the special structure of the audio token sequence that holds the most promise for future advances in long-sequence audio modeling.
-Concretely, both [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md) and [EnCodec (2022)]() rely on Residual Vector Quantization (RVQ), where each compressed audio frame is quantized by a series of quantizers, with each quantizer operating on the residual of the previous one, and the number of quantizers control-ling the overall bitrate.
+Concretely, both [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md) and [EnCodec (2022)]() rely on Residual Vector Quantization (RVQ), where each compressed audio frame is quantized by a series of quantizers, with each quantizer operating on the residual of the previous one, and the number of quantizers control-ling the overall bitrate.
 This induces a hierarchical token structure, where tokens from finer RVQ levels contribute less to the perceptual quality, allowing for efficient factorizations and approximations of the joint distribution of the token sequence.
 Hence, the models and decoding schemes should take this special structure of the input into account for efficient training and inference.
 
@@ -95,8 +95,8 @@ In this work, we present ***SoundStorm***, a method for efficient and high-quali
 1) 适用于音频 token 层次结构的架构;
 2) 用于残差矢量量化 token 序列的并行非自回归, 基于置信度解码方案.
 
-***SoundStorm*** relies on a bidirectional attention-based [Conformer (2020)]() that is trained to predict masked audio tokens produced by [SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md) given a condition-ing signal such as the semantic tokens of [AudioLM (2022)](2022.09.07_AudioLM.md).
-On the input side, it sums up the embeddings of the tokens corresponding to the same [SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md) frame, such that the internal sequence length for the self-attention is identical to the number of [SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md) frames, and independent of the number of quantizers in the RVQ.
+***SoundStorm*** relies on a bidirectional attention-based [Conformer (2020)]() that is trained to predict masked audio tokens produced by [SoundStream](../SpeechCodec/2021.07.07_SoundStream.md) given a condition-ing signal such as the semantic tokens of [AudioLM (2022)](2022.09.07_AudioLM.md).
+On the input side, it sums up the embeddings of the tokens corresponding to the same [SoundStream](../SpeechCodec/2021.07.07_SoundStream.md) frame, such that the internal sequence length for the self-attention is identical to the number of [SoundStream](../SpeechCodec/2021.07.07_SoundStream.md) frames, and independent of the number of quantizers in the RVQ.
 The output embeddings are then processed by separate heads per RVQ level to predict the masked target tokens.
 At inference time, given the conditioning signal, ***SoundStorm*** starts with all audio tokens masked out, and fills in the masked tokens RVQ level-by-level over several iterations, predicting multiple tokens in parallel during a single iteration within a level.
 To support this inference scheme, we propose a masking scheme for training that mimics the inference procedure.
@@ -122,8 +122,8 @@ When synthesizing dialogues of 30 seconds, we measure a runtime of 2 seconds on 
 ### Modeling the Tokens of Neural Audio Codecs
 
 Unsupervised speech embeddings ([Wav2Vec2.0](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md); [W2V-BERT](../SpeechRepresentation/2021.08.07_W2V-BERT.md)) have provided a low-framerate representation of the underlying signal which remains rich enough after discretization for language models to generate intelligible speech from a specific speaker as a sequence of tokens ([Generative Spoken Language Modeling (2021)]()).
-Neural audio codecs ([SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md)), with their ability of reconstructing high-quality audio at very low bitrates, subsequently allowed for extending discrete modeling to audio signals as diverse as multi-speaker speech and piano ([AutoLM (2022)](); [SPEAR-TTS (2023)](2023.02.07_SPEAR-TTS.md)), music ([MusicLM (2023)](2023.01.26_MusicLM.md)) or sound effects ([AudioGen (2022)](2022.09.30_AudioGen.md)).
-In particular, [AudioLM (2022)](2022.09.07_AudioLM.md) introduces a hierarchical sequence-to-sequence approach where high-level semantic tokens are generated as an intermediate representation, which is then used as a conditioning signal for predicting tokens of a [SoundStream (2021)](../Speech_Neural_Codec/2021.07.07_SoundStream.md) codec.
+Neural audio codecs ([SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md)), with their ability of reconstructing high-quality audio at very low bitrates, subsequently allowed for extending discrete modeling to audio signals as diverse as multi-speaker speech and piano ([AutoLM (2022)](); [SPEAR-TTS (2023)](2023.02.07_SPEAR-TTS.md)), music ([MusicLM (2023)](2023.01.26_MusicLM.md)) or sound effects ([AudioGen (2022)](2022.09.30_AudioGen.md)).
+In particular, [AudioLM (2022)](2022.09.07_AudioLM.md) introduces a hierarchical sequence-to-sequence approach where high-level semantic tokens are generated as an intermediate representation, which is then used as a conditioning signal for predicting tokens of a [SoundStream (2021)](../SpeechCodec/2021.07.07_SoundStream.md) codec.
 While this hierarchical approach has demonstrated remarkable results for speech ([SPEAR-TTS (2023)](2023.02.07_SPEAR-TTS.md)) and music modeling ([MusicLM (2023)](2023.01.26_MusicLM.md); [SingSong (2023)]()), the computational cost of modeling flattened SoundStream tokens with self-attention scales quadratically with the sequence length and thus the bitrate of the neural codec, preventing these models from generating long-form audio with high quality.
 ***SoundStorm*** alleviates this issue by modeling the multi-level tokens of the neural codec in parallel, inducing a two-order of magnitude speed-up over autoregressive modeling and unlocking the ability to scale audio generation abilities both in quality and in sequence length.
 
