--- a/Models/SpeechLM/2024.04.10_LLaMA-VITS.md
+++ b/Models/SpeechLM/2024.04.10_LLaMA-VITS.md
@@ -66,16 +66,16 @@ The advent of **end-to-end TTS models** marks a significant milestone, increasin
 **End-to-end models** are capable of trans forming raw text directly into final speech output, which not only streamlines the structural complexity of TTS systems and facilitates easier deployment but also significantly reduces the dependency on manual feature engineering, simplifying the training process.
 Moreover, they notably enhance the naturalness and intelligibility of the speech, thereby be coming the predominant architecture in **TTS models**.
 For instance, [Char2Wav (2017)]() introduces an attentive encoder-decoder frame work for direct speech synthesis from text input.
-[Tacotron (2017)](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md) undertakes training from the ground up and directly predicts linear spectrograms.
-Furthermore, the speech produced by [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md) closely mirrors the natural human voice.
+[Tacotron (2017)](../Acoustic/2017.03.29_Tacotron.md) undertakes training from the ground up and directly predicts linear spectrograms.
+Furthermore, the speech produced by [Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md) closely mirrors the natural human voice.
 
 In the realm of **end-to-end TTS models**, many have adopted a non-autoregressive architecture.
 This architecture enables parallel data processing, where the model’s output generation does not depend on the output of the previous time step, thereby enhancing processing speed.
 It also circumvents the error accumulation issue inherent in **traditional autoregressive models**, which significantly boosts TTS performance.
-[FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md) and its variants exemplify this trend.
-[FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md) employs a transformer-based architecture to generate mel-spectrograms in parallel.
-Building on [FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md), [FastPitch (2020)](../../Models/TTS2_Acoustic/2020.06.11_FastPitch.md) predicts pitch contours during inference, enabling the production of more expressive and high quality speech.
-[FastSpeech2 (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) further incorporates explicit duration prediction and introduces pitch and energy as conditional inputs.
+[FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md) and its variants exemplify this trend.
+[FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md) employs a transformer-based architecture to generate mel-spectrograms in parallel.
+Building on [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [FastPitch (2020)](../Acoustic/2020.06.11_FastPitch.md) predicts pitch contours during inference, enabling the production of more expressive and high quality speech.
+[FastSpeech2 (2020)](../Acoustic/2020.06.08_FastSpeech2.md) further incorporates explicit duration prediction and introduces pitch and energy as conditional inputs.
 
 Previous non-autoregressive approaches typically involve distinct training phases for **acoustic models** and **vocoders**.
 [VITS (2021)](../E2E/2021.06.11_VITS.md) introduces a more natural-sounding output compared to these two-stage systems through its one-stage parallel end-to-end architecture.
