--- a/Models/SpeechLM/2024.06.03_ControlSpeech.md
+++ b/Models/SpeechLM/2024.06.03_ControlSpeech.md
@@ -62,16 +62,16 @@ The relevant code and demo are available at https://github.com/jishengpeng/Contr
 <details>
 <summary>展开原文</summary>
 
-Over the past decade, the field of speech synthesis has seen remarkable advancements ([FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md), [VITS](../E2E/2021.06.11_VITS.md), [FastDiff](../Diffusion/2022.04.21_FastDiff.md), [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md)), achieving synthesized speech that rivals real human speech in terms of expressiveness and naturalness ([NaturalSpeech](../E2E/2022.05.09_NaturalSpeech.md)).
-Recently, with the development of large language models (GPT-3, GPT-4, [LLaMA](../TextLM/2023.02.27_LLaMA.md)) and generative models (DDPM, [HiFi-GAN](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../TTS2_Acoustic/2020.05.22_Glow-TTS.md), [BVAE-TTS](../TTS2_Acoustic/2021.01.13_BVAE-TTS.md)) in other domains, the tasks of zero-shot ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../Diffusion/2023.04.18_NaturalSpeech2.md) [VoiceBox](2023.06.23_VoiceBox.md), [Mega-TTS](2023.06.06_Mega-TTS.md), [SoundStorm](../SpeechLM/2023.05.16_SoundStorm.md) and style-controllable speech synthesis ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [PromptStyle](../E2E/2023.05.31_PromptStyle.md), [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) have garnered significant attention in the speech domain due to their powerful zero-shot generation and controllability capabilities.
+Over the past decade, the field of speech synthesis has seen remarkable advancements ([FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md); [VITS](../E2E/2021.06.11_VITS.md); [FastDiff](../Vocoder/2022.04.21_FastDiff.md); [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)), achieving synthesized speech that rivals real human speech in terms of expressiveness and naturalness ([NaturalSpeech](../E2E/2022.05.09_NaturalSpeech.md)).
+Recently, with the development of large language models (GPT-3, GPT-4, [LLaMA](../TextLM/2023.02.27_LLaMA.md)) and generative models (DDPM, [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md); [BVAE-TTS](../Acoustic/2021.01.13_BVAE-TTS.md)) in other domains, the tasks of zero-shot ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../Diffusion/2023.04.18_NaturalSpeech2.md) [VoiceBox](2023.06.23_VoiceBox.md), [Mega-TTS](2023.06.06_Mega-TTS.md), [SoundStorm](../SpeechLM/2023.05.16_SoundStorm.md)) and style-controllable speech synthesis ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [PromptStyle](../E2E/2023.05.31_PromptStyle.md), [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) have garnered significant attention in the speech domain due to their powerful zero-shot generation and controllability capabilities.
 Zero-shot TTS ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md)) refers to the ability to perfectly clone an unseen speaker's voice using only a few seconds of a speech prompt by significantly scaling up both the corpus and model sizes.
 Style-controllable TTS ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [InstructTTS](../Prompt/2023.01.31_InstructTTS.md)), on the other hand, allows for the control of a speaker's style (prosody, accent, emotion, etc.) through textual descriptions.
 
 </details>
 <br>
 
-在过去的十年中, 语音合成领域取得了显著的进步, 例如 [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md), [VITS](../E2E/2021.06.11_VITS.md), [FastDiff](../Diffusion/2022.04.21_FastDiff.md), [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md), 实现了在表达性和自然度上能与真人语音相媲美的合成语音.
-近期, 随着大语言模型 (GPT-3, GPT-4, LLaMA) 和在其他领域的生成模型 (DDPM, [HiFi-GAN](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../TTS2_Acoustic/2020.05.22_Glow-TTS.md), [BVAE-TTS](../TTS2_Acoustic/2021.01.13_BVAE-TTS.md)) 的发展, 零样本文本转语音 ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../Diffusion/2023.04.18_NaturalSpeech2.md) [VoiceBox](2023.06.23_VoiceBox.md), [Mega-TTS](2023.06.06_Mega-TTS.md), [SoundStorm](../SpeechLM/2023.05.16_SoundStorm.md)) 和风格可控语音合成 ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [PromptStyle](../E2E/2023.05.31_PromptStyle.md), [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) 在语音领域受到了极大的关注, 这得益于它们强大的零样本生成和可控性能力.
+在过去的十年中, 语音合成领域取得了显著的进步, 例如 [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.mdITS](../E2E/2021.06.11_VITS.md), [FastDiff](../Vocoder/2022.04.21_FastDiff.md), [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md了在表达性和自然度上能与真人语音相媲美的合成语音.
+近期, 随着大语言模型 (GPT-3, GPT-4, LLaMA) 和在其他领域的生成模型 (DDPM, [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md), [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md), [BVAE-TTS](../Acoustic/2021.01.13_BVAE-TTS.md)) 的发展, 零样本文本转语音 ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../Diffusion/2023.04.18_NaturalSpeech2.md) [VoiceBox](2023.06.23_VoiceBox.md), [Mega-TTS](2023.06.06_Mega-TTS.md), [SoundStorm](../SpeechLM/2023.05.16_SoundStorm.md)) 和风格可控语音合成 ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [PromptStyle](../E2E/2023.05.31_PromptStyle.md), [InstructTTS](../Prompt/2023.01.31_InstructTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md)) 在语音领域受到了极大的关注, 这得益于它们强大的零样本生成和可控性能力.
 
 - 零样本文本转语音 ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md), [NaturalSpeech 2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md)) 指的是通过显著扩撒语料库和模型规模, 仅使用几秒钟的语音提示就能完美克隆一个未见过的说话人的声音.
 - 风格可控文本转语音 ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [InstructTTS](../Prompt/2023.01.31_InstructTTS.md)) 允许通过文本描述来控制说话人的风格 (语调, 口音, 情绪等).
@@ -106,7 +106,7 @@ For instance, the speech prompt might contain a style different from that descri
 Inspired by this observation, we attempted to incorporate the concept of an information bottleneck in ***ControlSpeech*** to achieve independent disentanglement of timbre, content, and style.
 Additionally, to attain robust zero-shot speaker cloning capabilities, a large-scale, multi-speaker training dataset ([MLS](../../Datasets/2020.12.07_MLS.md), [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)) is essential.
 Leveraging recent breakthroughs in the codec domain, we used [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) which is pre-trained on 60,000 hours ([Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)) speech as the speech tokenizer for ***ControlSpeech***.
-During the speech synthesis process, we adopted [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) as the base synthesis framework and employed an advanced non-autoregressive confidence-based codec generator [5, 2, [Phenaki](../_Basis/2022.10.05_Phenaki.md)] as our decoder.
+During the speech synthesis process, we adopted [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md) as the base synthesis framework and employed an advanced non-autoregressive confidence-based codec generator [5, 2, [Phenaki](../_Basis/2022.10.05_Phenaki.md)] as our decoder.
 
 </details>
 <br>
@@ -117,7 +117,7 @@ During the speech synthesis process, we adopted [FastSpeech2](../TTS2_Acoustic/2
 受此观察启发, 我们尝试在 ***ControlSpeech*** 中引入信息瓶颈的概念, 以实现音色, 内容和风格的独立解耦.
 此外, 为了获得强大的零样本说话人克隆能力, 一个大规模的多说话人训练数据集 ([MLS](../../Datasets/2020.12.07_MLS.md), [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md)) 是必要的.
 结合近期在编解码器领域的突破, 我们使用在 60,000 小时的 [Libri-Light](../../Datasets/2019.12.17_Libri-Light.md) 语音上预训练的 [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) 作为 ***ControlSpeech*** 的语音分词器.
-在语音合成过程中, 我们采用 [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) 作为基础合成框架, 并采用先进的非自回归置信度编解码器生成器 (MaskGIT,2023.05.16_SoundStorm.md_SoundStorm.md), [Phenaki](../_Basis/2022.10.05_Phenaki.md)) 作为解码器.
+在语音合成过程中, 我们采用 [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md础合成框架, 并采用先进的非自回归置信度编解码器生成器 (MaskGIT,2023.05.16_SoundStorm.md_SoundStorm.md), [Phenaki](../_Basis/2022.10.05_Phenaki.md)) 作为解码器.
 
 <details>
 <summary>展开原文</summary>
@@ -193,15 +193,15 @@ However, we encourage reviewers to closely examine the connections and distincti
 <details>
 <summary>展开原文</summary>
 
-In recent times, neural acoustic codecs ([SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md), [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md), [HiFi-Codec](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md), [Vocos](../TTS3_Vocoder/2023.03.01_Vocos.md), [SpeechTokenizer](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md), [FunCodec](../Speech_Neural_Codec/2023.09.14_FunCodec.md)) have demonstrated remarkable capabilities in reconstructing high-quality audio at extremely low bitrates.
-To elaborate, [SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md) utilizes a model architecture comprising a fully convolutional encoder/decoder network and a residual vector quantizer (RVQ) to effectively compress speech.
-[EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) employs a streaming encoder-decoder architecture with a quantized latent space, trained in an end-to-end fashion.
-[HiFi-Codec](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md) introduces a group-residual vector quantization (GRVQ) technique to reduce the number of quantizers.
-[Vocos](../TTS3_Vocoder/2023.03.01_Vocos.md) aims to bridge the gap between time-domain and Fourier-based neural vocoders for high-quality audio synthesis.
-In order to narrow the gaps between text and acoustic codec tokens, [SpeechTokenizer](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md) and [FunCodec](../Speech_Neural_Codec/2023.09.14_FunCodec.md) introduces the concept of using semantic tokens in the first channel of discrete codecs.
+In recent times, neural acoustic codecs ([SoundStream](../SpeechCodec/2021.07.07_SoundStream.md), [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md), [HiFi-Codec](../SpeechCodec/2023.05.04_HiFi-Codec.md), [Vocos](../Vocoder/2023.03.01_Vocos.md), [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md), [FunCodec](../SpeechCodec/2023.09.14_FunCodec.md)) have demonstrated remarkable capabilities in reconstructing high-quality audio at extremely low bitrates.
+To elaborate, [SoundStream](../SpeechCodec/2021.07.07_SoundStream.md) utilizes a model architecture comprising a fully convolutional encoder/decoder network and a residual vector quantizer (RVQ) to effectively compress speech.
+[EnCodec](../SpeechCodec/2022.10.24_EnCodec.md) employs a streaming encoder-decoder architecture with a quantized latent space, trained in an end-to-end fashion.
+[HiFi-Codec](../SpeechCodec/2023.05.04_HiFi-Codec.md) introduces a group-residual vector quantization (GRVQ) technique to reduce the number of quantizers.
+[Vocos](../Vocoder/2023.03.01_Vocos.md) aims to bridge the gap between time-domain and Fourier-based neural vocoders for high-quality audio synthesis.
+In order to narrow the gaps between text and acoustic codec tokens, [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md) and [FunCodec](../SpeechCodec/2023.09.14_FunCodec.md) introduces the concept of using semantic tokens in the first channel of discrete codecs.
 This transition helps mitigate the disparity between text and acoustic tokens.
-[Language-Codec](../Speech_Neural_Codec/2024.02.19_Language-Codec.md) employs the MCRVQ mechanism to evenly distribute information from the first three channels, thereby reducing the gap between text and acoustic tokens.
-[DAC](../Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md) greatly improves the quality of codec reconstruction by introducing multi-scale discriminators loss.
+[Language-Codec](../SpeechCodec/2024.02.19_Language-Codec.md) employs the MCRVQ mechanism to evenly distribute information from the first three channels, thereby reducing the gap between text and acoustic tokens.
+[DAC](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md) greatly improves the quality of codec reconstruction by introducing multi-scale discriminators loss.
 [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) pioneered the concept of a disentangled codec, decomposing speech into timbre, content, prosody, and acoustic details within its discrete space, and demonstrated a certain degree of voice conversion capability.
 In an endeavor to enhance the disentangled codec, we explored modifying the parallel vector quantization structure to a residual vector quantization form and incorporating additional stylistic supervisory signals.
 However, our efforts did not yield substantial improvements compared to [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md).
@@ -210,16 +210,16 @@ Therefore, we utilize the pre-trained [FACodec](../Diffusion/2024.03.05_NaturalS
 </details>
 <br>
 
-近段时间, 神经声学编解码器 ([SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md), [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md), [HiFi-Codec](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md), [Vocos](../TTS3_Vocoder/2023.03.01_Vocos.md), [SpeechTokenizer](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md), [FunCodec](../Speech_Neural_Codec/2023.09.14_FunCodec.md)) 已经在以相当低比特率重构高质量音频方面展现出卓越的能力.
+近段时间, 神经声学编解码器 ([SoundStream](../SpeechCodec/2021.07.07_SoundStream.md), [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md), [HiFi-Codec](../SpeechCodec/2023.05.04_HiFi-Codec.md), [Vocos](../Vocoder/2023.03.01_Vocos.md), [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md), [FunCodec](../SpeechCodec/2023.09.14_FunCodec.md)) 已经在以相当低比特率重构高质量音频方面展现出卓越的能力.
 下面做进一步的说明:
-- [SoundStream](../Speech_Neural_Codec/2021.07.07_SoundStream.md) 利用一个由全卷积编码器/解码器网络和残差向量量化器 (RVQ) 组成的模型架构, 以有效地压缩语音.
-- [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) 采用具有量化隐变量的流式编码器-解码器架构, 以端到端的方式训练.
-- [HiFi-Codec](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md) 引入了组残差向量量化 (GRVQ) 技术, 以减少量化器的数量.
-- [Vocos](../TTS3_Vocoder/2023.03.01_Vocos.md) 旨在将时域和基于傅里叶的神经语音合成器之间的差距缩小到足以产生高质量音频.
-- [SpeechTokenizer](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md) 和 [FunCodec](../Speech_Neural_Codec/2023.09.14_FunCodec.md) 在离散编解码的第一个通道中使用语义 Token 以减少文本和音频 Token 的差距.
+- [SoundStream](../SpeechCodec/2021.07.07_SoundStream.md) 利用一个由全卷积编码器/解码器网络和残差向量量化器 (RVQ) 组成的模型架构, 以有效地压缩语音.
+- [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md) 采用具有量化隐变量的流式编码器-解码器架构, 以端到端的方式训练.
+- [HiFi-Codec](../SpeechCodec/2023.05.04_HiFi-Codec.md) 引入了组残差向量量化 (GRVQ) 技术, 以减少量化器的数量.
+- [Vocos](../Vocoder/2023.03.01_Vocos.md) 旨在将时域和基于傅里叶的神经语音合成器之间的差距缩小到足以产生高质量音频.
+- [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md) 和 [FunCodec](../SpeechCodec/2023.09.14_FunCodec.md) 在离散编解码的第一个通道中使用语义 Token 以减少文本和音频 Token 的差距.
 - 这种转变有助于缓解文本和音频 Token 之间的差距.
-- [Language-Codec](../Speech_Neural_Codec/2024.02.19_Language-Codec.md) 采用 MCRVQ 机制, 将信息均匀分配到前三个通道, 从而减少文本和声学 Token 之间的差距.
-- [DAC](../Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md) 通过引入多尺度判别器损失来大幅提高编解码器重建的质量.
+- [Language-Codec](../SpeechCodec/2024.02.19_Language-Codec.md) 采用 MCRVQ 机制, 将信息均匀分配到前三个通道, 从而减少文本和声学 Token 之间的差距.
+- [DAC](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md) 通过引入多尺度判别器损失来大幅提高编解码器重建的质量.
 - [FACodec](../Diffusion/2024.03.05_NaturalSpeech3.md) 开创了解耦编解码器的概念, 将语音分解为音色, 内容, 语调, 和声学细节, 并展示了一定程度的语音转换能力.
 
 为了增强解耦编解码器, 我们探索了修改并行向量量化结构为残差向量量化形式, 并将额外的风格监督信号纳入其中.
@@ -313,7 +313,7 @@ Finally, we will discuss the training loss and inference process of ***ControlSp
 To achieve simultaneous zero-shot timbre cloning and style cloning, one viable approach is to leverage a large-scale pre-trained disentangled codec space.
 On one hand, extensive pre-training on a diverse speaker dataset ensures fundamental zero-shot capabilities.
 On the other hand, disentangled codec representations effectively reduce the entanglement between timbre and style.
-As illustrated in Fig.02, ***ControlSpeech*** is fundamentally an encoder-decoder model based on [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) for codec generation.
+As illustrated in Fig.02, ***ControlSpeech*** is fundamentally an encoder-decoder model based on [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md codec generation.
 The dashed box represents frame-level features, while the solid box represents global features.
 The ***Style Mixture Semantic Density (SMSD)*** module samples style text to generate corresponding global style representations, which are then combined with text representations from the text encoder via a cross-attention module.
 These combined representations are fed into the duration prediction model and subsequently into the codec generator, which is a non-autoregressive [Conformer](../ASR/2020.05.16_Conformer.md) based on mask iteration and parallel generation.
@@ -327,7 +327,7 @@ These representations are then concatenated and upsampled into speech through th
 为了实现同步的零样本音色克隆和风格克隆, 一个可行的方法是利用一个大规模预训练解耦编解码空间.
 一方面, 在多样说话人数据集上广泛地预训练能够确保基本的零样本能力.
 另一方面, 解耦编解码表示能有效地减少音色和风格的纠缠.
-如图 02 所示, ***ControlSpeech*** 是基于 [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md) 的编码器-解码器模型用于编解码生成.
+如图 02 所示, ***ControlSpeech*** 是基于 [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md器-解码器模型用于编解码生成.
 虚线框表示帧级特征, 实线框表示全局特征.
 
 ![../SpeechLM/Images/2024.06.03_ControlSpeech_Fig.02.png](../SpeechLM/Images/2024.06.03_ControlSpeech_Fig.02.png)
@@ -422,7 +422,7 @@ $$
 <details>
 <summary>展开原文</summary>
 
-In the second stage, following [AdaSpeech](../TTS2_Acoustic/2021.03.01_AdaSpeech.md), we utilize a conditional normalization layer to fuse the previously obtained $Y_{codec} and $Y_t$, producing the input for the codec decoder.
+In the second stage, following [AdaSpeech](../Acoustic/2021.03.01_AdaSpeech.md), we utilize a conditional normalization layer to fuse the previously obtained $Y_{codec} and $Y_t$, producing the input for the codec decoder.
 This input is then processed by the pre-trained decoder to generate the final speech output $Y$.
 Specifically, we first use two simple linear layers $W_{\gamma}$ and $W_{\beta}$, which take the speaker embedding $Y_s$ as input and output the scale vectors $\gamma$ and bias vectors $\beta$ respectively.
 These lightweight, learnable scale vectors $\gamma$ and bias vectors $\beta$ are then fused with $Y_{codec}$.
@@ -437,7 +437,7 @@ where $\mu_c$ and $\sigma_c^2$ are the mean and variance of the hidden represent
 </details>
 <br>
 
-第二个阶段, 遵循 [AdaSpeech](../TTS2_Acoustic/2021.03.01_AdaSpeech.md), 我们利用条件归一化层融合之前获得的 $Y_{codec}$ 和 $Y_t$, 产生编解码器解码器的输入.
+第二个阶段, 遵循 [AdaSpeech](../Acoustic/2021.03.01_AdaSpeech.md), 我们利用条件归一化层融合之前获得的 $Y_{codec}$ 和 $Y_t$, 产生编解码器解码器的输入.
 输入被预训练解码器处理后生成最终的语音输出 $Y$.
 具体来说, 我们首先使用两个简单线性层 $W_{\gamma}$ 和 $W_{\beta}$, 它们接收说话者嵌入 $Y_s$ 作为输入, 输出尺度向量 $\gamma$ 和偏差向量 $\beta$ 各自.
 这些轻量化的, 可学习的尺度向量 $\gamma$ 和偏差向量 $\beta$ 随后与 $Y_{codec}$ 融合.
@@ -664,7 +664,7 @@ The relevant baseline reproduction code has been integrated into the ***ControlT
 Evaluation metrics We have aligned our objective experiments with ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS 2](../Prompt/2023.09.05_PromptTTS2.md)).
 To evaluate the model's style controllability, we use accuracy to represent the evaluation metric, which measures the correspondence between the style factors in the output speech and those in the prompts.
 The accuracy of pitch, speaking speed, and volume is calculated using signal processing tools, while emotion classification accuracy is computed using a fine-tuned emotion classification model.
-We employ the official version of the [Emotion2Vec](../Speech_Representaion/2023.12.23_Emotion2Vec.md) model for the speech emotion recognition task, which is fine-tuned on the emotional dataset of ***VccmDataset***.
+We employ the official version of the [Emotion2Vec](../SpeechRepresentation/2023.12.23_Emotion2Vec.md) model for the speech emotion recognition task, which is fine-tuned on the emotional dataset of ***VccmDataset***.
 To evaluate timbre similarity (Spk-sv) between the original prompt and synthesized speech, we utilize the base-plus-sv version of [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md).
 Additionally, we conduct Automatic Speech Recognition (ASR) using the Whisper3 [41] model on the generated audio and calculate the word error rate (Wer) compared to the original transcriptions.
 For subjective testing, we conduct mean opinion score (MOS) evaluations on the test set to measure audio naturalness via crowdsourcing.
@@ -700,7 +700,7 @@ We provide a detailed explanation of these metrics and their use cases in the ma
 评估指标 我们的客观实验与 ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS 2](../Prompt/2023.09.05_PromptTTS2.md)) 保持一致.
 为了评估模型的风格可控性, 我们使用准确度作为评估指标, 该指标衡量输出语音中的风格因素与提示中的风格因素之间的对应关系.
 音高, 说话速度和音量的准确度使用信号处理工具计算, 而情感分类准确度则使用在***VccmDataset***情感数据上微调的情感分类模型计算.
-我们使用[Emotion2Vec](../Speech_Representaion/2023.12.23_Emotion2Vec.md)模型的官方版本来进行语音情感识别任务, 该模型在***VccmDataset***的情感数据集上进行了微调.
+我们使用[Emotion2Vec](../SpeechRepresentation/2023.12.23_Emotion2Vec.md)模型的官方版本来进行语音情感识别任务, 该模型在***VccmDataset***的情感数据集上进行了微调.
 为了评估原始提示与合成语音之间的音色相似度(Spk-sv), 我们使用了[WavLM](../SpeechRepresentation/2021.10.26_WavLM.md)的base-plus-sv版本.
 此外, 我们使用Whisper3 [41]模型对生成的音频进行自动语音识别(ASR), 并计算与原始转录相比的字错误率(Wer).
 对于主观测试, 我们在测试集上进行平均意见分数(MOS)评估, 通过众包来衡量音频的自然度.
@@ -812,10 +812,10 @@ The style-controllable baseline models were trained on the same sets ***VccmData
 We utilize a pre-trained [BERT](../TextLM/2018.10.11_BERT.md) model consisting of 12 hidden layers with 110M parameters.
 For the implementation of the basic MDN network model, we largely followed the approach described in [12].
 D Model architecture in the ***ControlSpeech***
-Follow [NaturalSpeech 3](../Diffusion/2024.03.05_NaturalSpeech3.md), the basic architecture of codec encoder and codec decoder follows [DAC](../Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md) and employs the SnakeBeta activation function ([BigVGAN](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
+Follow [NaturalSpeech 3](../Diffusion/2024.03.05_NaturalSpeech3.md), the basic architecture of codec encoder and codec decoder follows [DAC](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md) and employs the SnakeBeta activation function ([BigVGAN](../Vocoder/2022.06.09_BigVGAN.md)).
 The timbre extractor consists of several [Conformer](../ASR/2020.05.16_Conformer.md) blocks.
 We use Nqc = 2, Nqp = 1, Nqd = 3 as the number of quantizers for each of the three FVQ Qc, Qp, Qd, the codebook size for all the quantizers is 1024.
-Text encoder and variance adaptor share the similar architecture which is comprised of several FFT blocks or attention layers as used by [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md).
+Text encoder and variance adaptor share the similar architecture which is comprised of several FFT blocks or attention layers as used by [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md
 The codec generator is a decoder primarily based on [Conformer](../ASR/2020.05.16_Conformer.md) blocks, similar to [MobileSpeech](2024.02.14_MobileSpeech.md).
 However, we opted for fewer encoder layers and a smaller parameter count in the codec generator.
 E ***VccmDataset*** details
