--- a/Models/SpeechLM/2024.08.05_LSLM.md
+++ b/Models/SpeechLM/2024.08.05_LSLM.md
@@ -185,8 +185,8 @@ D. 全双工语音语言模型 (同时听说能力).
 
 Simplex SLMs, depicted in Figure.01(A) and Figure.01(B), are limited to a single channel, either for listening or speaking.
 With the assistance of LLM, simplex SLMs exhibit strong understanding capabilities.
-Representative works include LLM-based ASR ([Yu et al. [46]](../ASR/2023.09.25_Connecting_Speech_Encoder_&_LLM_for_ASR.md); [SLAM-ASR [24]](../ASR/2024.02.13_SLAM-ASR.md); [MaLa-ASR [45]](../ASR/2024.06.09_MaLa-ASR.md); [Seed-ASR [32]](../ASR/2024.07.05_Seed-ASR.md)), LLM-based speech translation ([COSMIC [28]](../SpeechLM/2023.11.03_COSMIC.md); [SALM [07]](../SpeechLM/2023.10.13_SALM.md); [Huang et al. [16]](Investigating_Decoder-Only_LLMs_for_STT_Translation.md), [LLaST [06]](../SpeechLM/2024.07.22_LLaST.md)), and LLM-based speech emotion understanding ([SECap [44]](../Speech_Representaion/2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](../Speech_Representaion/2024.07.10_AffectGPT.md)).
-Similarly, simplex SLMs have demonstrated robust generation capabilities, as seen in LLM-based TTS ([LLM&VALL-E [15]](LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md)).
+Representative works include LLM-based ASR ([Yu et al. [46]](../ASR/2023.09.25_Connecting_Speech_Encoder_&_LLM_for_ASR.md); [SLAM-ASR [24]](../ASR/2024.02.13_SLAM-ASR.md); [MaLa-ASR [45]](../ASR/2024.06.09_MaLa-ASR.md); [Seed-ASR [32]](../ASR/2024.07.05_Seed-ASR.md)), LLM-based speech translation ([COSMIC [28]](../SpeechLM/2023.11.03_COSMIC.md); [SALM [07]](../SpeechLM/2023.10.13_SALM.md); [Huang et al. [16]](Investigating_Decoder-Only_LLMs_for_STT_Translation.md), [LLaST [06]](../SpeechLM/2024.07.22_LLaST.md)), and LLM-based speech emotion understanding ([SECap [44]](../SpeechRepresentation/2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](../SpeechRepresentation/2024.07.10_AffectGPT.md)).
+Similarly, simplex SLMs have demonstrated robust generation capabilities, as seen in LLM-based TTS ([LLM&VALL-E [15]](2023.12.30_LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md)).
 Some research leverages the powerful in-context learning capabilities of LLMs to extend task-specific abilities to more universal applications, such as speech understanding ([Wav2Prompt [11]](2024.06.01_Wav2Prompt.md)), audio understanding ([LTU [14]](../SpeechLM/2023.05.18_LTU.md)), or both ([SALMONN [35]](../SpeechLM/2023.10.20_SALMONN.md); [Qwen-Audio [09]](../SpeechLM/2023.11.14_Qwen-Audio.md); [Qwen2-Audio [10]](../SpeechLM/2024.07.15_Qwen2-Audio.md)).
 Despite their growing power and versatility, simplex SLMs are limited to one-way communication (either human $\rightarrow$ machine or machine $\rightarrow$ human).
 LLMs have facilitated a paradigm shift from simplex models to half-duplex models, also known as turn-based models, as shown in Figure.01(C).
@@ -201,9 +201,9 @@ While these half duplex models can both listen and speak, they are constrained t
 代表性的工作包括
 - 基于 LLM 的 ASR: [Yu et al. [46]](../ASR/2023.09.25_Connecting_Speech_Encoder_&_LLM_for_ASR.md); [SLAM-ASR [24]](../ASR/2024.02.13_SLAM-ASR.md); [MaLa-ASR [45]](../ASR/2024.06.09_MaLa-ASR.md); [Seed-ASR [32]](../ASR/2024.07.05_Seed-ASR.md);
 - 基于 LLM 的语音翻译: [COSMIC [28]](../SpeechLM/2023.11.03_COSMIC.md); [SALM [07]](../SpeechLM/2023.10.13_SALM.md); [Huang et al. [16]](Investigating_Decoder-Only_LLMs_for_STT_Translation.md), [LLaST [06]](../SpeechLM/2024.07.22_LLaST.md);
-- 基于 LLM 的语音情感理解: [SECap [44]](../Speech_Representaion/2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](../Speech_Representaion/2024.07.10_AffectGPT.md);
+- 基于 LLM 的语音情感理解: [SECap [44]](../SpeechRepresentation/2023.12.16_SECap.md); [Spoken-LLM [21]](2024.02.20_Spoken-LLM.md); [AffectGPT [20]](../SpeechRepresentation/2024.07.10_AffectGPT.md);
 
-类似地, 单工 SLMs 也展现出了稳健的生成能力, 如基于 LLM 的 TTS: [LLM&VALL-E [15]](LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md).
+类似地, 单工 SLMs 也展现出了稳健的生成能力, 如基于 LLM 的 TTS: [LLM&VALL-E [15]](2023.12.30_LLM&VALL-E.md), [T5-TTS [25]](2024.06.25_T5-TTS.md); [BASE TTS [18]](../SpeechLM/2024.02.12_BASE-TTS.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md).
 
 一些研究利用 LLMs 强大的上下文学习能力以扩展具体任务的能力到更通用的应用, 例如语音理解 ([Wav2Prompt [11]](2024.06.01_Wav2Prompt.md)), 音频理解 ([LTU [14]](../SpeechLM/2023.05.18_LTU.md)) 或两者兼有  ([SALMONN [35]](../SpeechLM/2023.10.20_SALMONN.md); [Qwen-Audio [09]](../SpeechLM/2023.11.14_Qwen-Audio.md); [Qwen2-Audio [10]](../SpeechLM/2024.07.15_Qwen2-Audio.md)).
 
