--- a/Models/SpeechLM/2024.09.11_SSR-Speech.md
+++ b/Models/SpeechLM/2024.09.11_SSR-Speech.md
@@ -65,7 +65,7 @@ In addition, the watermark encodec leverages the original unedited speech segmen
 
 ### Modeling
 
-Given a speech signal, the [EnCodec [20]](../Speech_Neural_Codec/2022.10.24_EnCodec.md) model is first applied to quantize it into discrete tokens $A = \{a_1, a_2, ..., a_{T}\}$, where $T$ represents the length of the audio tokens, and each token $a_i = \{a_{i,1}, a_{i,2}, ..., a_{i,K}\}$ corresponds to $K$ codebooks of the EnCodec.
+Given a speech signal, the [EnCodec [20]](../SpeechCodec/2022.10.24_EnCodec.md) model is first applied to quantize it into discrete tokens $A = \{a_1, a_2, ..., a_{T}\}$, where $T$ represents the length of the audio tokens, and each token $a_i = \{a_{i,1}, a_{i,2}, ..., a_{i,K}\}$ corresponds to $K$ codebooks of the EnCodec.
 
 As shown in Fig.~\ref{fig:1}, during training, we randomly mask $P$ continuous spans of the audio (\textit{e.g.} $P=1$ in Fig.~\ref{fig:1}).
 The masked tokens are concatenated with special tokens $[m_1],[m_2],...,[m_P]$, each followed by a special token $[eog]$.
