--- a/Models/SpeechLM/2024.10.29_VAT.md
+++ b/Models/SpeechLM/2024.10.29_VAT.md
@@ -57,12 +57,12 @@ This was exacerbated by the failure of AR models of continuous sequences (e.g., 
 It was only after the arrival of audio discretization techniques suitable for speech generation tasks ([AudioLM (2022)](2022.09.07_AudioLM.md)) that the TTS community began to direct more effort toward AR Transformer-based models.
 
 A key challenge faced by such models, however, stems from their extensive reliance on attention operations, which tend to cause robustness issues that make them unfit for use in a production TTS environment.
-Early attention-based TTS models, such as [Tacotron (2017)](../TTS2_Acoustic/2017.03.29_Tacotron.md), [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md), often exhibited problems like word omission or repetition, and struggled to generalize
+Early attention-based TTS models, such as [Tacotron (2017)](../Acoustic/2017.03.29_Tacotron.md), [Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md), often exhibited problems like word omission or repetition, and struggled to generalize
 beyond the training lengths.
 Attempts to mitigate these issues using monotonic alignment mechanisms yielded some success
 ([Raffel et al. (2017)](../_Full/2017.04.03_Online_and_Linear-Time_Attention_by_Enforcing_Monotonic_Alignments.md); [Zhang et al. (2018)](../_Full/2018.07.18_Forward_Attention_in_Sequence-To-Sequence_Acoustic_Modeling_for_Speech_Synthesis.md); [Tacotron-GMMA (2019)](../TTS2_Acoustic/2019.10.23_DCA.md)),
 but many ultimately turned to non-autoregressive, duration-based models, which were more robust and efficient during
-synthesis ([Glow-TTS (2020)](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [NAT (2020)](../TTS2_Acoustic/2020.10.08_NAT.md); [FastSpeech2 (2020)](../TTS2_Acoustic/2020.06.08_FastSpeech2.md)).
+synthesis ([Glow-TTS (2020)](../Acoustic/2020.05.22_Glow-TTS.md); [NAT (2020)](../TTS2_Acoustic/2020.10.08_NAT.md); [FastSpeech2 (2020)](../Acoustic/2020.06.08_FastSpeech2.md)).
 While significant research has focused on improving robustness and length generalization for Transformers in general, these issues still persist in the latest AR TTS systems ([ELLA-V (2024)](2024.01.14_ELLA-V.md); [VALL-T (2024)](2024.01.25_VALL-T.md)).
 
 In this paper we introduce a system called ***Very Attentive Tacotron (VAT)***, a discrete AR Transformer-based encoder-decoder model designed for robust speech synthesis.
@@ -99,7 +99,7 @@ For audio discretization, we use a neural vocoder paired with a [VQ-VAE (2017)](
 This allows us to quickly retrain the spectrogram discretization for different bitrates or frame rates without having to retrain an entire neural audio codec model, which can be a time consuming and finicky process.
 The VQ-VAE is trained using a simple L1 reconstruction loss,
 and to improve reconstruction quality, its encoder yields multiple categorical codes per frame using [product quantization (PQ)](../../Modules/VQ/PQ.md) over multiple codebooks.
-The neural vocoder we use is GAN-based and combines features from [Parallel WaveGAN (2019)](../TTS3_Vocoder/2019.10.25_Parallel_WaveGAN.md) and [HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
+The neural vocoder we use is GAN-based and combines features from [Parallel WaveGAN (2019)](../Vocoder/2019.10.25_Parallel_WaveGAN.md) and [HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md).
 
 Unlike the systems covered in Section~\ref{sec:related-work} that do "zero-shot" speaker cloning via audio prompting, we learn separate speaker embeddings for each speaker in the training set.
 We find this better suited for medium-sized datasets and industry use cases, where we care about creating high quality voices for specific target speakers.
