--- a/Models/SpeechLM/2023.01.05_VALL-E.md
+++ b/Models/SpeechLM/2023.01.05_VALL-E.md
@@ -64,7 +64,7 @@ See https://aka.ms/valle for demos of our work.
 <summary>展开原文</summary>
 
 The last decade has yielded dramatic breakthroughs in speech synthesis through the development of neural networks and end-to-end modeling.
-Currently, cascaded *text-to-speech (TTS)* systems ([Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../TTS2_Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
+Currently, cascaded *text-to-speech (TTS)* systems ([Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
 While advanced TTS systems can synthesize high-quality speech from single or multiple speakers ([DelightfulTTS2 (2022)](../TTS2_Acoustic/2022.07.11_DelightfulTTS2.md); [VITS (2021)](../E2E/2021.06.11_VITS.md)), it still requires high-quality clean data from the recording studio.
 Large-scale data crawled from the Internet cannot meet the requirement, and always lead to performance degradation.
 Because the training data is relatively small, current TTS systems still suffer from poor generalization.
@@ -75,7 +75,7 @@ Instead of designing a complex and specific network for this problem, the ultima
 Recent years have witnessed notable performance improvement for data increase in the text language model, from 16GB of uncompressed text ([BERT (2018)](../TextLM/2018.10.11_BERT.md)), to 160GB ([RoBERTa (2019)](../TextLM/2019.07.26_RoBERTa.md)), to 570GB ([GPT-3 (2020)](../TextLM/2020.05.28_GPT-3.md)), and finally, around 1TB ([PaLM (2022)](../TextLM/2022.04.05_PaLM.md)).
 Transferring this success to the field of speech synthesis, we introduce ***VALL-E***, the first language model-based TTS framework leveraging large, diverse, and multi-speaker speech data.
 As shown in Fig.01, to synthesize personalized speech (e.g., zero-shot TTS), ***VALL-E*** generates the corresponding acoustic tokens conditioned on the acoustic tokens of the 3-second enrolled recording and the phoneme prompt, which constrain the speaker and content information respectively.
-Finally, the generated acoustic tokens are used to synthesize the final waveform with the corresponding neural codec decoder ([EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md)).
+Finally, the generated acoustic tokens are used to synthesize the final waveform with the corresponding neural codec decoder ([EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md)).
 The discrete acoustic tokens derived from an audio codec model enable us to treat TTS as conditional codec language modeling and advanced prompting-based large-model techniques (as in [GPTs (2020)](../TextLM/2020.05.28_GPT-3.md))can be leveraged for the TTS tasks.
 The acoustic tokens also allow us to generate diverse synthesized results in TTS by using different sampling strategies during inference.
 
@@ -121,20 +121,20 @@ We encourage the reader to listen to our samples on the [demo page](https://aka.
 <summary>展开原文</summary>
 
 Current TTS methods can be categorized into cascaded and end-to-end methods.
-Cascaded TTS systems ([Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../TTS2_Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
+Cascaded TTS systems ([Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md); [FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [Transformer TTS (2018)](../Acoustic/2018.09.19_TransformerTTS.md)) usually leverage a pipeline with an acoustic model and a vocoder using mel spectrograms as the intermediate representations.
 To tackle the drawbacks of the vocoder, end-to-end TTS models ([VITS (2021)](../E2E/2021.06.11_VITS.md), [DelightfulTTS2 (2022)](../TTS2_Acoustic/2022.07.11_DelightfulTTS2.md)) are proposed to jointly optimize the acoustic model and vocoder.
 In real scenarios, it is highly desirable to customize a TTS system to an arbitrary voice with rare enrolled recordings.
 Therefore, there is growing interest in the zero-shot multi-speaker TTS techniques, and most of work is done in the context of cascaded TTS systems.
 As the pioneers, [Arik (2018)](../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md) proposes speaker adaptation and speaker encoding approaches.
-In the line of speaker adaptation, the following work ([SEA (2018)](../TTS2_Acoustic/2018.09.27_SEA.md); [Wang (2020)](../_Full/Spoken_Content_and_Voice_Factorization_for_Few-Shot_Speaker_Adaptation.md); [AdaSpeech (2021)](../TTS2_Acoustic/2021.03.01_AdaSpeech.md)) tries to improve the adaptation efficiency with less target speaker data and speaker-specific parameters.
+In the line of speaker adaptation, the following work ([SEA (2018)](../TTS2_Acoustic/2018.09.27_SEA.md); [Wang (2020)](../_Full/Spoken_Content_and_Voice_Factorization_for_Few-Shot_Speaker_Adaptation.md); [AdaSpeech (2021)](../Acoustic/2021.03.01_AdaSpeech.md)) tries to improve the adaptation efficiency with less target speaker data and speaker-specific parameters.
 [Meta-TTS (2021)](../TTS2_Acoustic/2021.11.07_Meta-TTS.md) applies meta-learning on speaker adaptation, which only requires 5-shot to build a well-performed system.
 In parallel, speaker encoding-based methods achieved great progress in recent years.
 A speaker encoding based system contains a speaker encoder and a TTS component, where the speaker encoder could be pre-trained on the speaker verification task ([Jia (2018)](../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md)).
 In [Jia (2018)](../_Full/2018.06.12_Transfer_Learning_from_Speaker_Verification_to_Multispeaker_Text-To-Speech_Synthesis.md) and [Arik (2018)](../_Full/2018.02.14_Neural_Voice_Cloning_with_a_Few_Samples.md), the experiments show that the model is able to generate high-quality outputs with 3 seconds enrolled recordings for in-domain speakers.
 To improve the quality of unseen speakers, advanced speaker embedding models ([Cai (2018)](../_Full/2018.04.14_Exploring_the_Encoding_Layer_and_Loss_Function_in_End-to-End_Speaker_and_Language_Recognition_System.md)) can be employed, but it is still undesirable according to [Tan (2021)](../../Surveys/2021.06.29_A_Survey_on_Neural_Speech_Synthesis_63P/Main.md).
-Another way is to design advanced but complex speaker encoder ([AdaSpeech4 (2022)](../TTS2_Acoustic/2022.04.01_AdaSpeech4.md)).
-Diffusion model based TTS ([Grad-TTS (2021)](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [Guided-TTS (2021)](../TTS2_Acoustic/2021.11.23_Guided-TTS.md)) is also extended to zero-shot TTS ([Grad-StyleSpeech (2022)](../TTS2_Acoustic/2022.11.17_Grad-StyleSpeech.md)) and achieved good results.
-Compared to previous work ([FastSpeech (2019)](../TTS2_Acoustic/2019.05.22_FastSpeech.md); [VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)), our work follows the line of cascaded TTS but first uses audio codec code as intermediate representations.
+Another way is to design advanced but complex speaker encoder ([AdaSpeech4 (2022)](../Acoustic/2022.04.01_AdaSpeech4.md)).
+Diffusion model based TTS ([Grad-TTS (2021)](../Acoustic/2021.05.13_Grad-TTS.md); [Guided-TTS (2021)](../TTS2_Acoustic/2021.11.23_Guided-TTS.md)) is also extended to zero-shot TTS ([Grad-StyleSpeech (2022)](../TTS2_Acoustic/2022.11.17_Grad-StyleSpeech.md)) and achieved good results.
+Compared to previous work ([FastSpeech (2019)](../Acoustic/2019.05.22_FastSpeech.md); [VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)), our work follows the line of cascaded TTS but first uses audio codec code as intermediate representations.
 It is the first one that has strong in-context learning capabilities as GPT-3, which does not require fine-tuning, pre-designed features, or a complex speaker encoder.
 
 </details>
@@ -147,9 +147,9 @@ It is the first one that has strong in-context learning capabilities as GPT-3, w
 
 Self-supervised learning is widely investigated in the field of speech understanding ([Wav2Vec2.0 (2020)](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md); [WavLM (2021)](../SpeechRepresentation/2021.10.26_WavLM.md)) and speech-to-speech generation ([GSLM (2021)](2021.02.01_GSLM.md); [AudioLM (2022)](2022.09.07_AudioLM.md)).
 In the context of speech-to-speech generation, a hot topic is how to synthesize speech in a textless setting.
-[GSLM (2021)](2021.02.01_GSLM.md) proposes to synthesize speech based on [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md) codes, and [Polyak (2021)](../_Full/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md) improves the performance by combining [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md) codes with codes of VQ-VAE and a speaker encoder.
-[AudioLM (2022)](2022.09.07_AudioLM.md) follows a similar way but use audio codecs ([SoundStream (2022)](../Speech_Neural_Codec/2021.07.07_SoundStream.md)) to synthesize speech, together with semantic codes.
-It should be noted that AudioLM is able to synthesize speech based on audio codecs without training an additional vocoder such as [HiFi-GAN (2020)](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
+[GSLM (2021)](2021.02.01_GSLM.md) proposes to synthesize speech based on [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md) codes, and [Polyak (2021)](../SpeechCodec/2021.04.01_Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md) improves the performance by combining [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md) codes with codes of VQ-VAE and a speaker encoder.
+[AudioLM (2022)](2022.09.07_AudioLM.md) follows a similar way but use audio codecs ([SoundStream (2022)](../SpeechCodec/2021.07.07_SoundStream.md)) to synthesize speech, together with semantic codes.
+It should be noted that AudioLM is able to synthesize speech based on audio codecs without training an additional vocoder such as [HiFi-GAN (2020)](../Vocoder/2020.10.12_HiFi-GAN.md).
 AudioLM is a speech-to-speech model, whereas ***VALL-E*** is a TTS model, so we can explicitly control the content in speech synthesis.
 Another direction is to apply pre-training to the neural TTS.
 [Chung (2018)](../_Full/2018.08.30_Semi-Supervised_Training_for_Improving_Data_Efficiency_in_End-to-End_Speech_Synthesis.md) pre-trains speech decoder in TTS through autoregressive mel-spectrogram prediction.
@@ -172,9 +172,9 @@ Since audio is typically stored as a sequence of 16-bit integer values, a genera
 In addition, the audio sample rate exceeding ten thousand leads to an extraordinarily long sequence length, making it more intractable for raw audio synthesis.
 To this end, speech quantization is required to compress integer values and sequence length.
 $\mu$-law transformation can quantize each timestep to 256 values and reconstruct high-quality raw audio.
-It is widely used in speech generative models, such as [WaveNet (2016)](../TTS3_Vocoder/2016.09.12_WaveNet.md), but the inference speed is still slow since the sequence length is not reduced.
+It is widely used in speech generative models, such as [WaveNet (2016)](../Vocoder/2016.09.12_WaveNet.md), but the inference speed is still slow since the sequence length is not reduced.
 Recently, vector quantization is widely applied in self-supervised speech models for feature extraction, such as [VQ-Wav2Vec (2019)](../SpeechRepresentation/2019.10.12_VQ-Wav2Vec.md) and [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md).
-The following work ([GSLM (2021)](2021.02.01_GSLM.md); [VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)) shows the codes from self-supervised models can also reconstruct content, and the inference speed is faster than [WaveNet](../TTS3_Vocoder/2016.09.12_WaveNet.md).
+The following work ([GSLM (2021)](2021.02.01_GSLM.md); [VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)) shows the codes from self-supervised models can also reconstruct content, and the inference speed is faster than [WaveNet](../Vocoder/2016.09.12_WaveNet.md).
 However, the speaker identity has been discarded and the reconstruction quality is low ([AudioLM (2022)](2022.09.07_AudioLM.md)).
 [AudioLM (2022)](2022.09.07_AudioLM.md) trains speech-to-speech language models on both k-me2022.09.07_AudioLM.md model and acoustic tokens from a neural codec model, leading to high-quality speech-to-speech generation.
 
@@ -184,9 +184,9 @@ Compared to traditional audio codec approaches, the neural-based codec is signif
 Compared to other quantization methods,the audio codec shows the following advantages:
 1) It contains abundant speaker information and acoustic information, which could maintain speaker identity in reconstruction compared to [HuBERT (2021)](../SpeechRepresentation/2021.06.14_HuBERT.md) codes.
 2) There is an off-the-shelf codec decoder to convert discrete tokens into a waveform, without the additional efforts on vocoder training like VQ-based methods that operated on spectrum ([VQTTS (2022)](../E2E/2022.04.02_VQTTS.md)).
-3) It could reduce the length of time steps for efficiency to address the problem in $\mu$-law transformation ([WaveNet (2016)](../TTS3_Vocoder/2016.09.12_WaveNet.md)).
+3) It could reduce the length of time steps for efficiency to address the problem in $\mu$-law transformation ([WaveNet (2016)](../Vocoder/2016.09.12_WaveNet.md)).
 
-We adopt a pre-trained neural audio codec model, [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md), as our tokenizer.
+We adopt a pre-trained neural audio codec model, [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md), as our tokenizer.
 EnCodec is a convolutional encoder-decoder model, whose input and output are both 24 kHz audio across variable bitrates.
 The encoder produces embeddings at 75 Hz for input waveforms at 24 kHz,which is a 320-fold reduction in the sampling rate.
 Each embedding is modeled by a *residual vector quantization (RVQ)*, in which we choose eight hierarchy quantizers with 1024 entries each as shown in [Fig.02]().
@@ -368,7 +368,7 @@ We use [LibriLight (2019)](../../Datasets/2019.12.17_Libri-Light.md) as the trai
 The number of distinct speakers is around 7000 in LibriLight.
 We train a hybrid DNN-HMM ASR model on 960 hours labeled LibriSpeech following Kaldi recipe.
 Once the hybrid model is trained, unlabeled speech data is decoded and transduced to the best phoneme-level alignment paths where the frameshift is 30ms.
-The [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) model is used to generate the acoustic code matrix for the 60K hours of data.
+The [EnCodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) model is used to generate the acoustic code matrix for the 60K hours of data.
 
 </details>
 <br>
@@ -450,7 +450,7 @@ To compare the speaker similarity, we use speech pairs from the same speaker in 
 Compared with the YourTTS baseline, our model is significantly better in both robustness and speaker similarity, showing that our generated speech is highly faithful to the given text and the given enrolled speech.
 Furthermore, the word error rate can be further reduced in ***VALL-E***-continual setting, because the acoustic tokens for the first 3 seconds are extracted from the ground truth.
 We also compare the robustness with other speech-to-speech LM-based generation models, GSLM and AudioLM, which use audio latent codes as input.
-GSLM uses HuBERT code as input and reconstructs the waveform with the [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md) model and the [WaveGlow (2018)](../TTS3_Vocoder/2018.10.31_WaveGlow.md) vocoder.
+GSLM uses HuBERT code as input and reconstructs the waveform with the [Tacotron2 (2017)](../Acoustic/2017.12.16_Tacotron2.md) model and the [WaveGlow (2018)](../Vocoder/2018.10.31_WaveGlow.md) vocoder.
 We run their open-sourced code using the released model and evaluate the results.
 Since the HuBERT codes discard the speaker identity, it achieves a poor speaker score.
 For the AudioLM, we list their WER score reported in their paper, which is obtained by a Conformer Transducer model.
