--- a/Models/SpeechLM/2024.01.25_VALL-T.md
+++ b/Models/SpeechLM/2024.01.25_VALL-T.md
@@ -40,7 +40,7 @@ The audio samples are available at http://cpdu.github.io/vallt.
 
 Text-to-speech (TTS) synthesis is a monotonic sequence-to-sequence task, maintaining a strict order between the input phoneme sequence and the output speech sequence.
 Moreover, the output speech sequence is at frame-level and one phoneme may correspond to multiple frames of speech, so the output sequence is significantly longer than its corresponding input phoneme sequence.
-Mainstream neural text-to-speech models, such as [FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md), GradTTS (Popov et al., 2021) and VoiceFlow (Guo et al., 2024), integrate a duration prediction module.
+Mainstream neural text-to-speech models, such as [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md); GradTTS (Popov et al., 2021) and VoiceFlow (Guo et al., 2024), integrate a duration prediction module.
 Prior to training, the target duration is conventionally derived using the Viterbi forced alignment algorithm.
 During training, this module is optimized by minimizing the mean square error (MSE) between predicted and target durations.
 In the inference phase, the duration predictor module predicts the duration for each input phoneme, establishing the alignment between the input and output sequences accordingly.
@@ -185,7 +185,7 @@ Hence, by leveraging aligned context window, ***VALL-T*** consistently maintains
 
 ### 4.1·Setup·设置
 
-In our experiments, we leverage our [Encodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) (Defossez et al., 2022) speech tokenizer whose frame shift is 20ms and the sampling rate of output waveforms is 16k.
+In our experiments, we leverage our [Encodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) (Defossez et al., 2022) speech tokenizer whose frame shift is 20ms and the sampling rate of output waveforms is 16k.
 It comprises 8 residual vector quantization (RVQ) indices for each frame.
 To ensure a fair comparison between [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) and out proposed model ***VALL-T***, we follow the approach introduced in [VALL-E (2023)](../SpeechLM/../SpeechLM/2023.01.05_VALL-E.md) that predicts the sequence of the first RVQ index with the auto-regressive models and then predicts the remaining 7 RVQ indices conditioned on the first RVQ index with a separate non-auto-regressive (NAR) model.
 Both the input and output sequences are encoded with BPE (Sennrich et al., 2016) algorithm to shorten sequence lengths and diminish GPU memory consumption.
@@ -221,10 +221,10 @@ In this section, we conduct an evaluation of our models on zero-shot TTS task.
 The task refers to synthesizing speech in the voices of unseen speakers given speech prompts and their corresponding transcriptions.
 Our test set uses a same test set as in (Du et al., 2024), containing 500 utterances and involving 37 speakers from the LibriTTS test set.
 Each speaker is assigned a specific speech prompt.
-Before assessing the performance of our models, we conduct speech resynthesis using our [Encodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) to evaluate the speech tokenizer.
+Before assessing the performance of our models, we conduct speech resynthesis using our [Encodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) to evaluate the speech tokenizer.
 We also do an experiment named “NAR resynthesis”.
 In this experiment, we send the ground-truth first RVQ index to the NAR model for predicting the remaining 7 RVQ indices.
-Then, we convert all the 8 RVQ indices to waveform using the [Encodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) decoder.
+Then, we convert all the 8 RVQ indices to waveform using the [Encodec (2022)](../SpeechCodec/2022.10.24_EnCodec.md) decoder.
 The purpose of the NAR resynthesis experiment is to demonstrate the performance degradation introduced by the NAR model, so we can better analyze the results of the entire pipelines, where the AR models are the primary focus of our paper.
 
 The baselines of this experiment include two models.
