--- a/Models/SpeechLM/2024.02.12_BASE-TTS.md
+++ b/Models/SpeechLM/2024.02.12_BASE-TTS.md
@@ -56,7 +56,7 @@ This progress has been enabled by Transformer-based architectures \cite{original
 Similar advances are now occurring in Speech Processing and Text-to-Speech (TTS), with models leveraging thousands of hours of data that push synthesis ever closer towards human-like speech.
 Some of these models, described in depth in Section \ref{sec:related_work}, rely on causal language modeling tasks, like [AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md) or [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md), whereas others use non-causal modules, such as [SoundStrom [18]](../SpeechLM/2023.05.16_SoundStorm.md) or [SpeechX [19]](../SpeechLM/2023.08.14_SpeechX.md), or diffusion decoders ([NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md)).
 
-Until 2022, leading Neural TTS models were almost exclusively trained on a few hundreds of hours of recorded audio ([Tacotron2 [22]](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md); ecat, [VITS [24]](../../Models/E2E/2021.06.11_VITS.md); DBLP:conf/iclr/0006H0QZZL21; [Grad-TTS [26]](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
+Until 2022, leading Neural TTS models were almost exclusively trained on a few hundreds of hours of recorded audio ([Tacotron2 [22]](../Acoustic/2017.12.16_Tacotron2.md); ecat, [VITS [24]](../../Models/E2E/2021.06.11_VITS.md); DBLP:conf/iclr/0006H0QZZL21; [Grad-TTS [26]](../Acoustic/2021.05.13_Grad-TTS.md)).
 Such systems can create well-enunciated speech that is occasionally expressive for the target speakers, but typically cannot generalize beyond the small amount of training data to render ambiguous and complex texts with truly expressive spoken performance \cite{triantafyllopoulos2023overview,tahon2018can,schnell2022controllability}.
 To achieve such higher levels of expressiveness, TTS systems historically had to rely on labeled datasets for specific speech phenomena; and even so, achieving human-like prosody for certain types of textual inputs has remained elusive \cite{tan2021survey}.
 For example, in English, compound nouns and questions are notoriously hard to render correctly without accurate syntactic parsing and semantic understanding \cite{kenter2020improvingprosodywithbert}.
@@ -71,7 +71,7 @@ To test the hypothesis that this also holds for LTTS, we propose an evaluation s
 See more details in Section \ref{sec:evaluation}.
 
 We design ***BASE TTS*** to model a joint distribution of text tokens followed by discrete speech representations, which we refer to as speechcodes.
-Discretization of speech through audio codecs ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [35]](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec [36]](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS ([AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md); [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md); [SoundStrom [18]](../SpeechLM/2023.05.16_SoundStorm.md); [SpeechX [19]](../SpeechLM/2023.08.14_SpeechX.md); [NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md); kharitonov2023speak).
+Discretization of speech through audio codecs ([VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [35]](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec [36]](../SpeechCodec/2022.10.24_EnCodec.md)) is central to our design, as it enables the direct application of methods developed for LLMs, which underlie recent works on LTTS ([AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md); [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md); [SoundStrom [18]](../SpeechLM/2023.05.16_SoundStorm.md); [SpeechX [19]](../SpeechLM/2023.08.14_SpeechX.md); [NaturalSpeech2 [20]](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md); kharitonov2023speak).
 Specifically, we model speechcodes using a decoder-only autoregressive Transformer with a cross-entropy training objective.
 Despite its simplicity, this objective can capture complex probability distributions of expressive speech, thus alleviating the oversmoothing problem seen in early neural TTS systems \cite{ren2022revisiting}.
 As an implicit language model, ***BASE TTS*** is also observed to make a qualitative jump in prosody rendering once a large enough variant is trained on sufficient data.
@@ -101,7 +101,7 @@ Casting TTS problem as next token prediction has gained popularity in recent yea
 
 The first model using this approach was [TortoiseTTS [21]](../Diffusion/2023.05.12_TorToise-TTS.md) released in 2022.
 It combines a GPT2-style speechcode language model with a diffusion decoder and an off-the-shelf vocoder, achieving remarkable few-shot capability.
-[VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md) followed a similar approach: the model is scaled to 60k hours of speech data and uses a pre-trained audio encoder EnCodec for speechcode extraction ([EnCodec [36]](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)).
+[VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md) followed a similar approach: the model is scaled to 60k hours of speech data and uses a pre-trained audio encoder EnCodec for speechcode extraction ([EnCodec [36]](../SpeechCodec/2022.10.24_EnCodec.md)).
 [VALL-E X [61]](../SpeechLM/2023.03.07_VALL-E_X.md) replicated VALL-E with 70k hours, with an additional cross-lingual speech-to-speech translation task in English and Chinese by using target language token as prompt.
 VioLa \cite{wang2023viola} extended VALL-EX with both text-to-text translation and speech-to-text recognition tasks.
 [SpeechX [19]](../SpeechLM/2023.08.14_SpeechX.md) extended VALL-E by adding noise suppression, target speaker extraction, clean and noisy speech editing, and speech removal tasks.
@@ -114,19 +114,19 @@ Qualitative linguistic analysis shows "emergent abilities" \cite{wei2022emergent
 
 ### Discrete Speech Representations
 
-In audio generative AI, the first acoustic encoders used in GPT-TTS are [VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md), [SoundStream [35]](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) and [EnCodec [36]](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md), which are deep learning audio compression techniques producing discrete acoustic token based on vector quantization.
-These acoustic encoders are shown to be superior to Mel-spectrograms \cite{DBLP:journals/corr/abs-2309-10922, yang2023towards}, but ignore semantic information and are unnecessarily complex due to lack of disentanglement ([RepCodec [65]](../Speech_Neural_Codec/2023.08.31_RepCodec.md)).
+In audio generative AI, the first acoustic encoders used in GPT-TTS are [VQ-VAE [34]](../../Modules/VQ/2017.11.02_VQ-VAE.md), [SoundStream [35]](../SpeechCodec/2021.07.07_SoundStream.md) and [EnCodec [36]](../SpeechCodec/2022.10.24_EnCodec.md), which are deep learning audio compression techniques producing discrete acoustic token based on vector quantization.
+These acoustic encoders are shown to be superior to Mel-spectrograms \cite{DBLP:journals/corr/abs-2309-10922, yang2023towards}, but ignore semantic information and are unnecessarily complex due to lack of disentanglement ([RepCodec [65]](../SpeechCodec/2023.08.31_RepCodec.md)).
 [AudioLM [16]](../SpeechLM/2022.09.07_AudioLM.md) combines SoundStream tokens with semantic BERT tokens \cite{chung2021w2v}.
-[SpeechTokenizer [67]](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md) and [RepCodec [65]](../Speech_Neural_Codec/2023.08.31_RepCodec.md) aim to capture semantics by adding self-supervised embedding prediction-based losses \cite{mohamed2022self}.
+[SpeechTokenizer [67]](../../Models/SpeechCodec/2023.08.31_SpeechTokenizer.md) and [RepCodec [65]](../SpeechCodec/2023.08.31_RepCodec.md) aim to capture semantics by adding self-supervised embedding prediction-based losses \cite{mohamed2022self}.
 ***BASE TTS*** builds acoustic tokens by leveraging semantic information from self-supervised embeddings and disentangling speaker information from the acoustic tokens.
 Then, it applies byte-pair encoding on these tokens to reduce memory requirement, allowing the model to train on longer sequences.
 
 ### LTTS Simplifies Modeling
 
-Since [Tacotron2 [22]](../../Models/TTS2_Acoustic/2017.12.16_Tacotron2.md), a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and SSML tag handling e.g.
+Since [Tacotron2 [22]](../Acoustic/2017.12.16_Tacotron2.md), a successful TTS paradigm has been to separate speech creation into three sub-systems: (1) a Frontend responsible for text normalization, grapheme-to-phoneme conversion and SSML tag handling e.g.
 to mark emphasis \cite{DBLP:journals/corr/abs-2307-07062}, (2) a Mel-spectrogram generator, inferring the amplitudes of the speech signal and responsible for the model expressivity, and (3) a dedicated Vocoder \cite{DBLP:conf/ssw/OordDZSVGKSK16, jiao2021universal}, generating the waveform by inferring the phase information.
 Expert knowledge can be induced to improve its performance such as using pre-computed features \cite{DBLP:conf/iclr/0006H0QZZL21}, coarse or fine-grained prosody information (\cite{Copycat}, and style control \cite{DBLP:conf/naacl/PrateekLBDLMRW19}.
-It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows （[VITS [24]](../../Models/E2E/2021.06.11_VITS.md)), and Diffusion ([Grad-TTS [26]](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
+It has also proven successful with architectures such as Transformers \cite{li2019neural, DBLP:conf/iclr/0006H0QZZL21}, Flows （[VITS [24]](../../Models/E2E/2021.06.11_VITS.md)), and Diffusion ([Grad-TTS [26]](../Acoustic/2021.05.13_Grad-TTS.md)).
 
 These systems require a complex pipeline.
 Any error made during an earlier stage is propagated to the next.
@@ -152,7 +152,7 @@ In this paper, we systemize an approach to produce and evaluate emergent context
 
 Low-resource TTS has focused on reducing the required amount of high quality training data through e.g. voice conversion [huybrechts2021low [88]](), data generation \cite{DBLP:conf/icassp/LajszczakPKBBJN22}, modeling techniques \cite{DBLP:journals/corr/abs-2307-07062}, or recording script optimizations \cite{shamsi2020tts}.
 This stems from the early difficulty of ingesting a high volume of data from multiple speakers in potentially different styles or languages.
-A step up in that direction is zero-shot inference such as in [Bark](https://github.com/suno-ai/bark) and [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), [AdaSpeech4 [91]](../../Models/TTS2_Acoustic/2022.04.01_AdaSpeech4.md), which aim to clone a voice with only a few seconds of recordings.
+A step up in that direction is zero-shot inference such as in [Bark](https://github.com/suno-ai/bark) and [YourTTS [60]](../../Models/E2E/2021.12.04_YourTTS.md), [AdaSpeech4 [91]](../Acoustic/2022.04.01_AdaSpeech4.md), which aim to clone a voice with only a few seconds of recordings.
 Due to leveraging a substantially larger dataset, a bigger model, and a dedicated speaker encoder, ***BASE TTS*** and the recent LTTS models set a new standard in data efficiency.
 
 ## 3·Methodology: 方法
@@ -178,7 +178,7 @@ VQ-VAE has been a successful paradigm in speech and image representation, and es
 
 In Section \ref{sec:wavlm}, however, we introduce a novel method of learning speech representations through WavLM-based speechcodes.
 In this method, we discretize features extracted from a WavLM SSL model to reconstruct a mel-spectrogram.
-We apply additional loss functions to promote speaker disentanglement, and compress the resulting speechcodes using [Byte-Pair Encoding (BPE)](../_Basis/BPE.md) to reduce sequence length, enabling us to model longer audio with Transformers.
+We apply additional loss functions to promote speaker disentanglement, and compress the resulting speechcodes using [Byte-Pair Encoding (BPE)](../_Basis/2015.08.31_BPE.md) to reduce sequence length, enabling us to model longer audio with Transformers.
 
 Both representations are compressed (325 bits/s and 400 bits/s respectively) to allow more efficient autoregressive modeling compared to popular audio codecs (e.g. 6k bits/s in [VALL-E [17]](../SpeechLM/2023.01.05_VALL-E.md)).
 With this level of compression, we aim to remove information from speechcodes that can be reconstructed during decoding (speaker, audio noise, etc.) to ensure that the capacity in speechcodes is primarily dedicated to encoding phonetic and prosodic information.
@@ -226,7 +226,7 @@ $$
 #### 3.2.3·Byte-Pair Encoding on Speechcodes
 
 The WavLM-based speech representations are learned at a frequency of 50 Hz to ensure that they offer enough resolution in time to be able to discriminate between single phonemes even in fast-paced speech (the average length of English phonemes tends not to dip below 20ms \cite{kuwabara1996acoustic}).
-We apply [Byte-Pair Encoding ](../_Basis/BPE.md) to reduce the average sequence length of speechcodes by around 40\%, in order to mitigate the quadratic memory increases in Transformers sequence length and minimize complexity for the autoregressive model.
+We apply [Byte-Pair Encoding ](../_Basis/2015.08.31_BPE.md) to reduce the average sequence length of speechcodes by around 40\%, in order to mitigate the quadratic memory increases in Transformers sequence length and minimize complexity for the autoregressive model.
 Similar to the BPE of texts, we iteratively join the most frequent pairs of speechcodes into new tokens and add them to the vocabulary until a pre-determined vocabulary size is reached.
 
 ### 3.3·Autoregressive Speech Modeling (SpeechGPT)
