--- a/Models/SpeechLM/2024.06.12_VALL-E_R.md
+++ b/Models/SpeechLM/2024.06.12_VALL-E_R.md
@@ -50,7 +50,7 @@ We first introduce the codec-merging approach in Section 3.1 which can improve i
 
 ### 3.1·Codec-Merging Approach
 
-Building upon the foundational work of [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md), we introduce the concept of a merged codec.
+Building upon the foundational work of [EnCodec](../SpeechCodec/2022.10.24_EnCodec.md), we introduce the concept of a merged codec.
 This innovative approach enables the downsampling of discrete codes across various layers through alterations in the inference forward process.
 Remarkably, this is achieved without necessitating any retraining or fine-tuning of the model, presenting a significant advancement in the efficient manipulation of audio data representations.
 
