--- a/Models/SpeechLM/2024.07.11_MELLE.md
+++ b/Models/SpeechLM/2024.07.11_MELLE.md
@@ -95,9 +95,9 @@ For subjective evaluations, ***MELLE*** is more favorably received by human list
 Traditional speech synthesis methods can be categorized concatenative systems, parametric systems, and end-to-end neural systems.
 Concatenative TTS systems deconstruct original audio waves into smaller segments and then reassembles them using algorithms like Viterbi, followed by signal processing techniques, to create new audio waves.
 Parametric TTS systems convert speech waves into spectrograms, utilizing acoustic parameters such as fundamental frequency and duration to synthesize new audio outputs.
-With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md)).
+With the rapid development of neural networks, end-to-end neural TTS systems are proposed to simplify previous speech synthesis pipeline via a single neural network, eliminating the need for the production of these linguistic and acoustic features ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md)).
 
-The advanced end-to-end neural TTS models, such as [Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
+The advanced end-to-end neural TTS models, such as [Tacotron](../Acoustic/2017.03.29_Tacotron.md), [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md), and [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md), usually generate mel-spectrograms directly from texts, then synthesize the audio results from the mel-spectrogram by a vocoder such as **WaveNet (2016)**.
 TransformerTTS employs Transformer-based encoder-decoder network as the main framework to replace RNN structures in Tacotron.
 FastSpeech further improve the speech quality and decoding efficiency using the non-autoregressive generation model with a duration module.
 These model are trained on small-scale, clean, single-speaker or few-speaker dataset, such as LJSpeech and LibriTTS.
@@ -187,7 +187,7 @@ $$
 
 where $\pmb{y}_{<t}$ denotes $[\pmb{y}_0, \pmb{y}_1,..., \pmb{y}_{t-1}]$ and $\theta$ represents the parameters of ***MELLE***.
 
-Inspired by previous neural TTS models ([TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md)), we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech.
+Inspired by previous neural TTS models ([TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)), we can also set a reduction factor $r$ (e.g., 2 or 4) to control the number of mel-spectrogram frames predicted at each decoding step, providing a balance between computational efficiency and the generation of high-quality speech.
 Formally, the original mel-spectrogram sequences $\pmb{y}$ will be partitioned into $\pmb{y}^r = [\pmb{y}_{0:r}, \pmb{y}_{r:2r}, ..., \pmb{y}_{(T-r):T}]$ with reduction factor $r$, and the likelihood function can be expressed as follows:
 
 $$
@@ -229,7 +229,7 @@ $$
 <details>
 <summary>原文</summary>
 
-As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md)).
+As illustrated in Figure.01, ***MELLE*** comprises the following main components: pre-nets that respectively convert text into sub-word tokens and extract mel-spectrograms from speech, before projecting them to the model dimension; an autoregressive (AR) Transformer decoder that serves as the language model; a latent sampling module that samples latent embedding from a predicted Gaussian distribution, and then projects it back to the spectrogram space; a stop prediction layer that determines the end of the speech and a convolutional post-net for spectrogram refinement, similar to the methods described in ([Tacotron2](../Acoustic/2017.12.16_Tacotron2.md); [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)).
 Finally, a vocoder is used to recover the speech from generated mel-spectrogram.
 
 Unlike neural codec language models that iteratively predict multi-layer codec codes, we do not require an additional non-autoregressive (NAR) model thanks to the completeness of the mel-spectrogram.
@@ -277,7 +277,7 @@ The output of the LM $\pmb{e}_t$ at time step $t$ is subsequently processed by t
 <summary>原文</summary>
 
 Sampling strategy is an critical part in TTS systems, as it not only introduces diversity in the output, but also enhances the generalization ability of the model.
-For example, Tacotron-like models ([Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../TTS2_Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
+For example, Tacotron-like models ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)) enable dropout in their pre-net during inference to introduce variation;
 Neural codec language models (**VALL-E (2023)**; **VALL-E X (2023)**) adopt the top-p random sampling to avoid the collapse outputs leading by greedy search;
 Diffusion-based ([NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../Diffusion/2024.03.05_NaturalSpeech3.md)) and flow-matching-based methods ([Voicebox](2023.06.23_VoiceBox.md)) restore speech representations from the sampling of a simpler distribution.
 
@@ -341,7 +341,7 @@ $$
 
 Since ***MELLE*** directly predicts continuous mel-spectrograms rather than discrete tokens, it cannot generate an `<EOS>` token to indicate the end of generation.
 Instead, we use a linear layer as a binary classifier, taking $\pmb{e}_t$ to determine if the generation should conclude, as depicted in Figure \ref{fig:modules} (mid).
-Following previous neural TTS models ([Tacotron](../TTS2_Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../TTS2_Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
+Following previous neural TTS models ([Tacotron](../Acoustic/2017.03.29_Tacotron.md); [Tacotron2](../Acoustic/2017.12.16_Tacotron2.md)), we employ multiple convolutional blocks as the post-net to produce a residual that is added to $\pmb{y}'=\{\pmb{y}'_{0}, \pmb{y}'_{1}, ..., \pmb{y}'_{T-1}\}$, resulting in the refined mel-spectrogram $\pmb{y}''=\{\pmb{y}''_{0}, \pmb{y}''_{1}, ..., \pmb{y}''_{T-1}\}$, as shown in Figure \ref{fig:modules} (right).
 During training, the model is trained using teacher-forcing; while during inference, post-net processes $\pmb{y}'$ after the AR generation concludes.
 
 </details>
@@ -381,7 +381,7 @@ $$
 <details>
 <summary>原文</summary>
 
-The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md)).
+The regression loss is a fundamental component of the training objective, ensuring the accurate prediction of mel-spectrogram frames, like conventional TTS ([TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md)).
 The regression loss, $\mathcal{L}_{\text{reg}}$, is composed of a combination of L1 and L2 losses, applied to both intermediate prediction $\pmb{y}'$ and final prediction $\pmb{y}''$ of the mel-spectrogram.
 It is defined as follows:
 
@@ -492,7 +492,7 @@ $$
 <details>
 <summary>原文</summary>
 
-We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like [TransformerTTS](../TTS2_Acoustic/2018.09.19_TransformerTTS.md) and [SpeechT5](2021.10.14_SpeechT5.md).
+We use a linear layer to project the output of the LM to a logit and calculate the BCE loss, $\mathcal{L}_{\text{stop}}$, for stop prediction, like [TransformerTTS](../Acoustic/2018.09.19_TransformerTTS.md) and [SpeechT5](2021.10.14_SpeechT5.md).
 During this calculation, positive and negative frames are extremely imbalanced, as each utterance has only one positive frame indicating "stop." To address this, we impose a larger weight (100) for the positive frames in the BCE loss.
 
 </details>
