--- a/Models/SpeechLM/2024.10.29_VADUSA.md
+++ b/Models/SpeechLM/2024.10.29_VADUSA.md
@@ -52,7 +52,7 @@ Our approach demonstrates strong generalization across large datasets and variou
 Large language models (LLMs) with auto-regressive (AR) architectures ([GPT-3 [1]](../TextLM/2020.05.28_GPT-3.md); [LLaMA [2]](../TextLM/2023.02.27_LLaMA.md)) have gained significant success in recent years.
 They generate text byte-pair encoding (BPE) tokens using a next-token prediction strategy ([Transformer [3]](../_Transformer/2017.06.12_Transformer.md)).
 This strategy samples the next token from a multinomial distribution generated based on the history tokens, which is simple but effective in building coherence over a long context.
-With the invention of discrete neural audio tokens ([HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md); [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [VQ-Wav2Vec [6]](../SpeechRepresentation/2019.10.12_VQ-Wav2Vec.md); [VQTTS [7]](../E2E/2022.04.02_VQTTS.md); [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md)), a speech utterance can also be coded as a discrete token sequence.
+With the invention of discrete neural audio tokens ([HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md); [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [VQ-Wav2Vec [6]](../SpeechRepresentation/2019.10.12_VQ-Wav2Vec.md); [VQTTS [7]](../E2E/2022.04.02_VQTTS.md); [EnCodec [8]](../SpeechCodec/2022.10.24_EnCodec.md)), a speech utterance can also be coded as a discrete token sequence.
 The paradigm in LLMs is then introduced to the speech modeling and synthesis field.
 Studies like [SPEAR-TTS [9]](2023.02.07_SPEAR-TTS.md), [VALL-E [10]](2023.01.05_VALL-E.md) and [BASE-TTS [11]](2024.02.12_BASE-TTS.md) and other works ([VALL-T [12]](2024.01.25_VALL-T.md); [ELLA-V [13]](2024.01.14_ELLA-V.md)) implement decoder-only AR architectures for speech codec generation with large-scale training data, allowing for generating natural-sounding speech.
 
@@ -63,12 +63,12 @@ Moreover, the trivial AR architecture predicts only one token at each inference 
 This creates a challenge between the need for low-latency spoken language synthesis and modeling long speech sequences.
 
 To mitigate the issue, one way of previous efforts is to reduce the input/output sequence length via distillation or better information compression, i.e., build low bitrate speech tokens.
-A bunch of works on neural codec ([TiCodec [14]](../Speech_Neural_Codec/2023.09.15_TiCodec.md); [Single-Codec [15]](../Speech_Neural_Codec/2024.06.11_Single-Codec.md); [WavTokenizer [16]](../Speech_Neural_Codec/2024.08.29_WavTokenizer.md)) attempt to lower the bitrate via a nicely configured vector quantize (VQ) module and a well-designed training process.
-Another inspiring research is aBPE ([aBPE [17]](../Speech_Representaion/2023.10.23_aBPE.md); [Li et al. (2024) [18]](2024.07.04_On_the_Effectiveness_of_Acoustic_BPE_in_Decoder-Only_TTS.md)), which applies BPE to discrete speech tokens, achieving lossless compression and showing big potential in accelerating speech synthesis.
+A bunch of works on neural codec ([TiCodec [14]](../SpeechCodec/2023.09.15_TiCodec.md); [Single-Codec [15]](../SpeechCodec/2024.06.11_Single-Codec.md); [WavTokenizer [16]](../SpeechCodec/2024.08.29_WavTokenizer.md)) attempt to lower the bitrate via a nicely configured vector quantize (VQ) module and a well-designed training process.
+Another inspiring research is aBPE ([aBPE [17]](../SpeechRepresentation/2023.10.23_aBPE.md); [Li et al. (2024) [18]](2024.07.04_On_the_Effectiveness_of_Acoustic_BPE_in_Decoder-Only_TTS.md)), which applies BPE to discrete speech tokens, achieving lossless compression and showing big potential in accelerating speech synthesis.
 However, these low-bitrate tokens either compromise speech reconstruction accuracy or make the frameshift variant, affecting the naturalness and quality of speech synthesis.
 
 Another way is to predict more speech tokens at one decoding step, which is the main focus of this paper.
-This idea has developed since the RNN era, started by Subscale WavRNN ([WaveRNN [19]](../TTS3_Vocoder/2018.02.23_WaveRNN.md)).
+This idea has developed since the RNN era, started by Subscale WavRNN ([WaveRNN [19]](../Vocoder/2018.02.23_WaveRNN.md)).
 It folds the wav token sequence in a subscaling way to realize predicting multiple tokens in parallel.
 Recently, [VALL-E 2 [20]](2024.06.08_VALL-E_2.md) uses a chunk-wise manner to generate a chunk of future tokens (typically 2 tokens) in one AR iteration.
 However, such methods usually lead to quality degradation because the history condition is insufficient when predicting at least half of a sequence.
@@ -88,7 +88,7 @@ This novel approach proves crucial in bridging the gap between fast decoding and
 它们使用下一个 Token 预测策略来生成文本**字节对编码 (Byte-Pair Encoding, BPE)** Token.
 这种策略基于历史 Token 从多项分布中采样下一个 Token, 简单但是有效地构建了长上下文的连贯性.
 
-随着离散神经音频 Token 的出现 ([HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md); [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [VQ-Wav2Vec [6]](../SpeechRepresentation/2019.10.12_VQ-Wav2Vec.md); [VQTTS [7]](../E2E/2022.04.02_VQTTS.md); [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md)), 语音发言也可以被编码为离散 Token 序列.
+随着离散神经音频 Token 的出现 ([HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md); [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md); [VQ-Wav2Vec [6]](../SpeechRepresentation/2019.10.12_VQ-Wav2Vec.md); [VQTTS [7]](../E2E/2022.04.02_VQTTS.md); [EnCodec [8]](../SpeechCodec/2022.10.24_EnCodec.md)), 语音发言也可以被编码为离散 Token 序列.
 LLM 的范式随之引入语音建模和合成领域.
 
 诸如 [SPEAR-TTS [9]](2023.02.07_SPEAR-TTS.md), [VALL-E [10]](2023.01.05_VALL-E.md) 和 [BASE-TTS [11]](2024.02.12_BASE-TTS.md) 等研究, 实现了基于大规模训练数据的仅解码器的自回归架构的语音编解码生成, 允许生成自然发音的语音.
@@ -102,13 +102,13 @@ LLM 的范式随之引入语音建模和合成领域.
 这就为低延迟的口语语言合成和建模长语音序列带来了挑战.
 
 为了缓解这一问题, 之前的努力之一是通过蒸馏或更好的信息压缩来减少输入/输出序列长度, 即构建低比特率语音 Token.
-一系列关于神经编解码器 ([TiCodec [14]](../Speech_Neural_Codec/2023.09.15_TiCodec.md); [Single-Codec [15]](../Speech_Neural_Codec/2024.06.11_Single-Codec.md); [WavTokenizer [16]](../Speech_Neural_Codec/2024.08.29_WavTokenizer.md)) 试图通过良好配置的向量量化 (VQ) 模块和精心设计的训练过程来降低比特率.
+一系列关于神经编解码器 ([TiCodec [14]](../SpeechCodec/2023.09.15_TiCodec.md); [Single-Codec [15]](../SpeechCodec/2024.06.11_Single-Codec.md); [WavTokenizer [16]](../SpeechCodec/2024.08.29_WavTokenizer.md)) 试图通过良好配置的向量量化 (VQ) 模块和精心设计的训练过程来降低比特率.
 
-另一种启发性的研究是 aBPE ([aBPE [17]](../Speech_Representaion/2023.10.23_aBPE.md); [Li et al. (2024) [18]](2024.07.04_On_the_Effectiveness_of_Acoustic_BPE_in_Decoder-Only_TTS.md)), 它将 BPE 应用于离散语音 Token, 实现无损压缩, 并在加速语音合成方面显示出巨大的潜力.
+另一种启发性的研究是 aBPE ([aBPE [17]](../SpeechRepresentation/2023.10.23_aBPE.md); [Li et al. (2024) [18]](2024.07.04_On_the_Effectiveness_of_Acoustic_BPE_in_Decoder-Only_TTS.md)), 它将 BPE 应用于离散语音 Token, 实现无损压缩, 并在加速语音合成方面显示出巨大的潜力.
 然而, 这些低比特率 Token 要么牺牲了语音重构精度, 要么使得帧移变化, 影响了语音合成的自然性和质量.
 
 另一种方法是在一个解码步预测更多的语音 Token, 这也是本文的主要关注点.
-这种想法从 RNN 时代开始, 由 Subscale WavRNN ([WaveRNN [19]](../TTS3_Vocoder/2018.02.23_WaveRNN.md)) 首次提出.
+这种想法从 RNN 时代开始, 由 Subscale WavRNN ([WaveRNN [19]](../Vocoder/2018.02.23_WaveRNN.md)) 首次提出.
 它以子尺度的方式将 Wav Token 序列折叠, 实现并行预测多个 Token.
 最近, [VALL-E 2 [20]](2024.06.08_VALL-E_2.md) 采用分块的方式在一个自回归迭代中生成未来 Token 块 (通常为 2 个 Token), 但这种方法往往导致质量下降, 因为在预测序列至少一半部分时历史条件是不足的.
 与此相反, 推测解码 ([Speculative Decoding [21]](../_Full/Fast_Inference_from_Transformers_via_Speculative_Decoding.md)) 广泛用于 LLM 推理, 提供了加速而不损失性能的能力, 仅需将额外的草稿模型集成到架构中.
@@ -197,7 +197,7 @@ The simplicity of [MEDUSA](../_Basis/MEDUSA.md) draft heads and the compatibilit
 
 In the vanilla version of ***VADUSA***, we simply use a [VALL-E](2023.01.05_VALL-E.md) TTS model as a base model for speech synthesis and integrate several [MEDUSA](../_Basis/MEDUSA.md) heads on top of it to speed up generation.
 However, in initial experiments, we found its acceptance length is not comparable to the results of [MEDUSA](../_Basis/MEDUSA.md) on text LLMs.
-This is because speech tokens such as those generated by systems like [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md), [HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md), and [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md), are obtained through vector quantization or clustering of IDs, rather than having distinct abstract semantic differences like text tokens ([Choi et al. (2024) [23]](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)).
+This is because speech tokens such as those generated by systems like [EnCodec [8]](../SpeechCodec/2022.10.24_EnCodec.md), [HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md), and [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md), are obtained through vector quantization or clustering of IDs, rather than having distinct abstract semantic differences like text tokens ([Choi et al. (2024) [23]](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)).
 Under the AR language modeling paradigm, multiple speech tokens often have very similar statistical features.
 This means that the multinomial distributions predicted by models like [VALL-E](2023.01.05_VALL-E.md) tend to be more 'average' and selecting the highest probability top-$k$ tokens using draft heads only covers a small probability range.
 Given that during validation the original head samples only once as the 'correct token', it is challenging for the draft heads in [VALL-E](2023.01.05_VALL-E.md) to make accurate predictions.
@@ -211,7 +211,7 @@ Similarly, under tree attention, we use draft heads to foresee the future tokens
 
 在 ***VADUSA*** 的原始版本中, 我们将 [VALL-E](2023.01.05_VALL-E.md) TTS 模型作为语音合成的基础模型, 并在其之上集成多个 [MEDUSA](../_Basis/MEDUSA.md) 头来加速生成.
 然而, 在初步实验中, 我们发现其接受长度无法与 [MEDUSA](../_Basis/MEDUSA.md) 在文本 LLMs 的结果相比.
-这是因为像 [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md), [HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md), 和 [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) 这样的系统生成的语音 Token 都是通过向量量化或 ID 聚类得到的, 而不是像文本 Token 那样具有独特的语义差异 ([Choi et al. (2024) [23]](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)).
+这是因为像 [EnCodec [8]](../SpeechCodec/2022.10.24_EnCodec.md), [HuBERT [4]](../SpeechRepresentation/2021.06.14_HuBERT.md), 和 [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) 这样的系统生成的语音 Token 都是通过向量量化或 ID 聚类得到的, 而不是像文本 Token 那样具有独特的语义差异 ([Choi et al. (2024) [23]](../_Full/2024.06.12_Self-Supervised_Speech_Representations_are_More_Phonetic_than_Semantic.md)).
 在自回归语言建模范式下, 多个语音 Token 往往具有非常相似的统计特征.
 这意味着像 [VALL-E](2023.01.05_VALL-E.md) 这样的模型预测的多项分布往往更加 '平均', 而仅使用草稿头来选择概率最高的前 $k$ 个 Token 仅仅覆盖了很小的概率范围.
 由于在验证时, 原始头只采样一次作为 '正确 Token', 因此 [VALL-E](2023.01.05_VALL-E.md) 中的草稿头在准确预测时面临着困难.
@@ -323,9 +323,9 @@ The whole system is cascaded by tokenizers of text and speech, a codec language 
 The codec language model, which is the main part of the system, consisted of 12 transformer layers, with 16 attention heads, 1024 hidden dimensions and 4096 feed-forward dimensions.
 We utilize a grapheme-to-phoneme converter as the text tokenizer.
 We tokenize speech with 2048 k-means clustering on features from the last layer of a [HuBERT-large [4]](../SpeechRepresentation/2021.06.14_HuBERT.md) model.
-Two additional speech tokens are used in the ablation study: [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) with its 2-group vector quantization using IDs of top 16000 statistically occuring frequency groups on [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md), and [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with its 8-layer residual vector quantization of 1024 size per codebook.
+Two additional speech tokens are used in the ablation study: [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) with its 2-group vector quantization using IDs of top 16000 statistically occuring frequency groups on [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md), and [EnCodec [8]](../SpeechCodec/2022.10.24_EnCodec.md) with its 8-layer residual vector quantization of 1024 size per codebook.
 All models used in tokenizers are pretrained.
-The vocoder, CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)), is constructed by two conformer blocks with 2 layers and 184 attention dimensions and a [HiFi-GAN [26]](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md), trained for converting semantic tokens to waveform. ***VADUSA*** draft heads are connected to the last transformer layer of the codec language model, constructed by a residual block with a linear layer and a [SiLU activation layer [27]](../../Modules/Activation/SiLU.md).
+The vocoder, CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)), is constructed by two conformer blocks with 2 layers and 184 attention dimensions and a [HiFi-GAN [26]](../Vocoder/2020.10.12_HiFi-GAN.md), trained for converting semantic tokens to waveform. ***VADUSA*** draft heads are connected to the last transformer layer of the codec language model, constructed by a residual block with a linear layer and a [SiLU activation layer [27]](../../Modules/Activation/SiLU.md).
 
 </details>
 <br>
@@ -336,11 +336,11 @@ The vocoder, CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)), i
 我们使用 [HuBERT-large [4]](../SpeechRepresentation/2021.06.14_HuBERT.md) 模型的最后一层的特征对语音进行 2048 个 K 均值聚类, 以进行语音分词.
 在消融实验中使用了两种额外的语音 Token:
 - [Wav2Vec 2.0 [5]](../SpeechRepresentation/2020.06.20_Wav2Vec2.0.md) 使用 2-组向量量化, 基于 [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md) 统计出现频率最高的 16000 个频率组的 ID.
-- [EnCodec [8]](../Speech_Neural_Codec/2022.10.24_EnCodec.md), 使用 8 层残差向量量化, 每个码本大小为 1024.
+- [EnCodec [8]](../SpeechCodec/2022.10.24_EnCodec.md), 使用 8 层残差向量量化, 每个码本大小为 1024.
 
 分词器中使用的所有模型均为预训练模型.
 
-声码器 CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)) 由两个具有两层和 184 个注意力维度的 Conformer 块以及 [HiFi-GAN [26]](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md) 组成, 用于将语义 Token 转换为波形.
+声码器 CTX-vec2wav ([UniCATS [25]](../Diffusion/2023.06.13_UniCATS.md)) 由两个具有两层和 184 个注意力维度的 Conformer 块以及 [HiFi-GAN [26]](../Vocoder/2020.10.12_HiFi-GAN.md) 组成, 用于将语义 Token 转换为波形.
 ***VADUSA*** 草稿头连接到编解码语言模型的最后一个 Transformer 层, 由一个带有线性层和 SiLU 激活层的残差块构成.
 
 #### Training Settings: 训练设置
